[package]
name = "indexing"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.98"
backoff = {version ="0.4.0" , features = ["tokio"]}
bincode = "1.3.3"
bs58 = "0.5.1"
chrono = "0.4.26"
clap = {version="4.5.42" , features = ["derive"]}
dotenv = "0.15"
env_logger = "0.11.3"
futures = "0.3.24"
hex = "0.4.3"
indicatif = "0.18.0"
inquire = "0.7.3"
log = "0.4.17"
maplit = "1.0.2"
serde_json = "1.0.86"
solana-transaction-status = "3.0.0"
tokio = {version="1.47.1" , features = ["rt-multi-thread", "fs"]}
tonic = {version="0.14.0" , features = ["zstd", "gzip", "tls-native-roots", "tls-ring"]}


# Solana SDK
solana-hash = "3.0.0"
solana-pubkey = "3.0.0"
solana-signature = "3.1.0"

# Yellowstone
yellowstone-grpc-client = { version = "10.1.0" }
yellowstone-grpc-proto = { version = "10.1.0", features = ["plugin"], default-features = false }



# cargo run --bin client -- --endpoint https://solana-rpc.parafi.tech:10443 --x-token 10443 subscribe --accounts --accounts-account SysvarC1ock11111111111111111111111111111111